force-app/main/default/objects/PS_ASU_SP_REC_GRAD__x/PS_ASU_SP_REC_GRAD__x.object-meta.xml
<CustomObject>
    <description>Data source script can be found here: https://docs.google.com/document/d/17x7kO8WUlPQ0TU6ROQTVdC_rtyYyTrX_Q0vwxQdIf0c/edit</description>
    <externalDataSource>MuleOdataApi</externalDataSource>
    <externalName>PS_ASU_SP_REC_GRADs</externalName>
    <label>Recent Graduation Term (external)</label>
    <pluralLabel>Recent Graduation Term (external)</pluralLabel>
</CustomObject>