force-app/main/default/objects/PS_ASU_SP_REC_GRAD__x/fields/EMPLID__c.field-meta.xml
<CustomField>
    <fullName>EMPLID__c</fullName>
    <description>Data sourced from PS_ACAD_PROG.EMPLID</description>
    <externalDeveloperName>EMPLID</externalDeveloperName>
    <label>Contact</label>
    <length>10</length>
    <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Recent Graduation Term (external)</relationshipLabel>
    <relationshipName>Recent_Graduation_Term_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>