force-app/main/default/objects/PS_ASU_SP_REC_GRAD__x/fields/NUMROWS__c.field-meta.xml
<CustomField>
    <fullName>NUMROWS__c</fullName>
    <description>Data sourced from PS_ACAD_PROG.Count(0)</description>
    <externalDeveloperName>NUMROWS</externalDeveloperName>
    <label>Completed Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>