force-app/main/default/objects/PS_ASU_SP_REC_GRAD__x/fields/STRM__c.field-meta.xml
<CustomField>
    <fullName>STRM__c</fullName>
    <description>Data sourced from PS_ACAD_PROG.COMPLETIONS_TERM</description>
    <externalDeveloperName>STRM</externalDeveloperName>
    <label>Term</label>
    <length>4</length>
    <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Recent Graduation Term (external)</relationshipLabel>
    <relationshipName>Recent_Graduation_Term_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>